--- a/Tilesfx/pom.xml
+++ b/Tilesfx/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>tilesfx</artifactId>
             <version>21.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>Tilesfx</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
